--- a/domain.yml
+++ b/domain.yml
@@ -5,6 +5,7 @@ actions:
 - utter_ok_search_cards
 - utter_ok_search_sets
 - utter_search_what
+- respond_chitchat
 entities:
 - product
 intents:
@@ -13,6 +14,8 @@ intents:
 - goodbye
 - affirm
 - deny
+- chitchat:
+    triggers: respond_chitchat
 responses:
   utter_default:
   - text: Sorry, I wasn't able to understand that.
