--- a/domain.yml
+++ b/domain.yml
@@ -6,8 +6,12 @@ actions:
 - utter_ok_search_sets
 - utter_search_what
 - respond_chitchat
+- action_search_cards
 entities:
 - product
+- card_type
+- card_color
+- card_rarity
 intents:
 - greet
 - search
@@ -16,6 +20,7 @@ intents:
 - deny
 - chitchat:
     triggers: respond_chitchat
+- describe_card
 responses:
   utter_default:
   - text: Sorry, I wasn't able to understand that.
@@ -25,7 +30,7 @@ responses:
   utter_greet:
   - text: Hi! I'm ScryBot. What would you like to do?
   utter_ok_search_cards:
-  - text: Ok. We will search for a card.
+  - text: Ok. We will search for a card. Can you describe it for me?
   utter_ok_search_sets:
   - text: Ok. We will search for a set.
   utter_search_what:
@@ -39,3 +44,10 @@ slots:
     values:
       - card
       - set
+  card_type:
+    type: unfeaturized
+  card_color:
+    type: unfeaturized
+  card_rarity:
+    type: unfeaturized
+      
