--- a/domain.yml
+++ b/domain.yml
@@ -34,6 +34,11 @@ responses:
   - text: Goodbye
   utter_greet:
   - text: Hi! I'm ScryBot. What would you like to do?
+    buttons:
+      - title: "Search for a card"
+        payload: "search for a card"
+      - title: "Fetch a random card"
+        payload: "fetch a random card"
   utter_ok_search_cards:
   - text: Ok. We will search for a card. Can you describe it for me?
   utter_ok_search_sets:
