--- a/config.yml
+++ b/config.yml
@@ -5,9 +5,8 @@ language: en
 pipeline:
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
-# # See https://rasa.com/docs/rasa/nlu/choosing-a-pipeline/ for more information.
-#   - name: ConveRTTokenizer
-#   - name: ConveRTFeaturizer
+# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
+#   - name: WhitespaceTokenizer
 #   - name: RegexFeaturizer
 #   - name: LexicalSyntacticFeaturizer
 #   - name: CountVectorsFeaturizer
@@ -20,13 +19,16 @@ pipeline:
 #   - name: EntitySynonymMapper
 #   - name: ResponseSelector
 #     epochs: 100
+#   - name: FallbackClassifier
+#     threshold: 0.3
+#     ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/core/policies/ for more information.
+# # See https://rasa.com/docs/rasa/policies for more information.
 #   - name: MemoizationPolicy
 #   - name: TEDPolicy
 #     max_history: 5
